// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swipe should renders correctly active 1`] = `
<View
  accessibilityLabel="swipe"
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetPanResponder={[Function]}
  onPanResponderGrant={[Function]}
  onPanResponderMove={[Function]}
  onPanResponderRelease={[Function]}
  onStartShouldSetPanResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(155, 161, 176, 1)",
      "borderRadius": 60,
      "height": 90,
      "opacity": 1,
      "padding": 6,
      "width": 150,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 75,
        "flex": 1,
        "transform": [
          {
            "translateX": 0,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Swipe should renders correctly active and disabled 1`] = `
<View
  accessibilityLabel="swipe"
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetPanResponder={[Function]}
  onPanResponderGrant={[Function]}
  onPanResponderMove={[Function]}
  onPanResponderRelease={[Function]}
  onStartShouldSetPanResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(43, 120, 238, 1)",
      "borderRadius": 60,
      "height": 90,
      "opacity": 0.4,
      "padding": 6,
      "width": 150,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 75,
        "flex": 1,
        "transform": [
          {
            "translateX": 60,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Swipe should renders correctly by default + 1`] = `
<View
  accessibilityLabel="swipe"
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetPanResponder={[Function]}
  onPanResponderGrant={[Function]}
  onPanResponderMove={[Function]}
  onPanResponderRelease={[Function]}
  onStartShouldSetPanResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(43, 120, 238, 1)",
      "borderRadius": 60,
      "height": 90,
      "opacity": 1,
      "padding": 6,
      "width": 150,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 75,
        "flex": 1,
        "transform": [
          {
            "translateX": 60,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Swipe should renders correctly by default - 1`] = `
<View
  accessibilityLabel="swipe"
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetPanResponder={[Function]}
  onPanResponderGrant={[Function]}
  onPanResponderMove={[Function]}
  onPanResponderRelease={[Function]}
  onStartShouldSetPanResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(155, 161, 176, 1)",
      "borderRadius": 60,
      "height": 90,
      "opacity": 1,
      "padding": 6,
      "width": 150,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 75,
        "flex": 1,
        "transform": [
          {
            "translateX": 0,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Swipe should renders correctly disabled + 1`] = `
<View
  accessibilityLabel="swipe"
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetPanResponder={[Function]}
  onPanResponderGrant={[Function]}
  onPanResponderMove={[Function]}
  onPanResponderRelease={[Function]}
  onStartShouldSetPanResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(155, 161, 176, 1)",
      "borderRadius": 60,
      "height": 90,
      "opacity": 0.4,
      "padding": 6,
      "width": 150,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 75,
        "flex": 1,
        "transform": [
          {
            "translateX": 0,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Swipe should renders correctly disabled - 1`] = `
<View
  accessibilityLabel="swipe"
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetPanResponder={[Function]}
  onPanResponderGrant={[Function]}
  onPanResponderMove={[Function]}
  onPanResponderRelease={[Function]}
  onStartShouldSetPanResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(155, 161, 176, 1)",
      "borderRadius": 60,
      "height": 90,
      "opacity": 0.4,
      "padding": 6,
      "width": 150,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 75,
        "flex": 1,
        "transform": [
          {
            "translateX": 0,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Swipe should renders correctly disabled dx: 20 1`] = `
<View
  accessibilityLabel="swipe"
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetPanResponder={[Function]}
  onPanResponderGrant={[Function]}
  onPanResponderMove={[Function]}
  onPanResponderRelease={[Function]}
  onStartShouldSetPanResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(43, 120, 238, 1)",
      "borderRadius": 60,
      "height": 90,
      "opacity": 0.4,
      "padding": 6,
      "width": 150,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 75,
        "flex": 1,
        "transform": [
          {
            "translateX": 60,
          },
        ],
      }
    }
  />
</View>
`;
